
$COPYRIGHT$

Additional copyrights may follow

$HEADER$

===========================================================================

This file contains the main features as well as overviews of specific
bug fixes (and other actions) for each version of hwloc since version
0.9.


Version 2.11.0
--------------
* API
  + Add hwloc_obj_set_subtype().
* Misc
  + The MemoryTiersNr info attribute in the root object now says how many
    memory tiers were built. Thanks to Antoine Morvan for the report.
* Tools/
  + Option --best-memattr may now return multiple nodes. Additional
    configuration flags may be given to tweak its behavior.
  + hwloc-info has a new --get-attr option to get a single attribute.
  + hwloc-info now supports "levels", "support" and "topology"
    special keywords for backward compatibility for hwloc 3.0.
  + The --taskset command-line option is superseded by the new
    --cpuset-output-format which also allows to export as list.
  + hwloc-calc may now import bitmasks described as a list of bits
    with the new "--cpuset-input-format list".


Version 2.10.0
--------------
* Heterogeneous Memory core improvements
  + Better heuristics to identify the subtype of memory such as HBM,
    DRAM, NVM, CXL-DRAM, etc.
  + Build memory tiers, i.e. sets of NUMA nodes with the same subtype
    and similar performance.
    - NUMA node tier ranks are exposed in the new MemoryTier info
      attribute (starts from 0 for highest bandwidth tier)..
  + See the new Heterogeneous Memory section in the documentation.
* API
  + Add hwloc_topology_free_group_object() to discard a Group created
    by hwloc_topology_alloc_group_object().
* Linux backend
  + Fix cpukinds on NVIDIA Grace to report identical cores even if they
    actually have very small frequency differences.
    Thanks to John C. Linford for the report.
  + Add CXLDevice attributes to CXL DAX objects and NUMA nodes to show
    which PCI device implements which window.