@@ -21,6 +21,8 @@ Version 2.11.0
 --------------
 * API
   + Add hwloc_obj_set_subtype().
+  + Add HWLOC_MEMBIND_WEIGHTED_INTERLEAVE memory binding policy on
+    Linux 6.9+. Thanks to Honggyu Kim for the patch.
 * Misc
   + The MemoryTiersNr info attribute in the root object now says how many
     memory tiers were built. Thanks to Antoine Morvan for the report.
